--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "openai": "^4.61.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/node": "^22.5.4"
+    "@types/node": "^22.5.4",
+    "dotenv": "^16.4.5"
   }
 }
