--- a/config copy.json
+++ b/config copy.json
@@ -8,7 +8,7 @@
         "assistant_prompts": ["architector.examples.file_structure.0_1"],
         "user_prompts": [],
         "ignore_general_system_prompts": false,
-        "model": "gpt-4o",
+        "model": "claude-3-5-sonnet-20240620",
         "temperature": "0.42"
       },
       {
@@ -18,7 +18,7 @@
         "assistant_prompts": [],
         "user_prompts": [],
         "ignore_general_system_prompts": false,
-        "model": "gpt-4o",
+        "model": "claude-3-5-sonnet-20240620",
         "temperature": "0.2"
       }
     ],
@@ -42,7 +42,7 @@
         "assistant_prompts": [],
         "user_prompts": ["acceptance.quality_assurance.0_3"],
         "ignore_general_system_prompts": false,
-        "model": "gpt-4o",
+        "model": "gpt-4o-mini",
         "temperature": "0.1"
       }
     ],
