--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.3",
     "openai": "^4.61.0",
     "typescript": "^5.6.2"
   },
